--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Zerhouni Site</title>
-</head>
-<body>
-  <h1>Welcome 🎉</h1>
-  <p>This is my GitHub Pages site!</p>
-</body>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>صفحتي الأولى</title>
+    <style>
+      body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 0; }
+      main { min-height: 100vh; display: grid; place-items: center; padding: 24px; }
+      .card { max-width: 680px; padding: 24px; border-radius: 16px; box-shadow: 0 10px 20px rgba(0,0,0,0.07); border: 1px solid #eee; }
+      h1 { margin-top: 0; }
+      p { line-height: 1.8; }
+      a { text-decoration: none; }
+    </style>
+  </head>
+  <body>
+    <main>
+      <section class="card">
+        <h1>مرحبًا بك 👋</h1>
+        <p>هذه صفحة HTML بسيطة. غيِّر هذا النص، ثم ارفع الملف <code>index.html</code> إلى الاستضافة (GitHub Pages أو Netlify) لتحصل على رابط عام يمكن لأي شخص فتحه.</p>
+        <p>مثال على زر:
+          <br/>
+          <a href="#" style="display:inline-block;padding:10px 16px;border-radius:10px;border:1px solid #ddd;">زر تجريبي</a>
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
