--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@
     </main>
   </body>
 </html>
+<img src="popo.JPG" alt="شهادة الطالب" style="max-width:600px; width:100%; border:1px solid #ccc; border-radius:6px;">
