--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <main>
       <section class="card">
         <h1>مرحبًا بك 👋</h1>
-        <p>هذه صفحة HTML بسيطة. غيِّر هذا النص، ثم ارفع الملف <code>index.html</code> إلى الاستضافة (GitHub Pages أو Netlify) لتحصل على رابط عام يمكن لأي شخص فتحه.</p>
-        <p>مثال على زر:
+          <img src="malariaX.JPG" alt="Student Certificate" style="max-width:600px; border:1px solid #ccc; border-radius:8px;">
           <br/>
           <a href="#" style="display:inline-block;padding:10px 16px;border-radius:10px;border:1px solid #ddd;">زر تجريبي</a>
         </p>
@@ -26,4 +25,3 @@
     </main>
   </body>
 </html>
-<img src="popo.JPG" alt="شهادة الطالب" style="max-width:600px; width:100%; border:1px solid #ccc; border-radius:6px;">
