--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>صفحتي الأولى</title>
+    <title>Certificate verification </title>
     <style>
       body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 0; }
       main { min-height: 100vh; display: grid; place-items: center; padding: 24px; }
@@ -16,8 +16,9 @@
   <body>
     <main>
       <section class="card">
-        <h1>مرحبًا بك 👋</h1>
-          <img src="malariaX.JPG" alt="Student Certificate" style="max-width:600px; border:1px solid #ccc; border-radius:8px;">
+        <h1>edX</h1>
+         <img src="malariaX.JPG" alt="Student Certificate" 
+           style="width:100%; max-width:1000px; border:1px solid #ccc; border-radius:8px;">
           <br/>
           <a href="#" style="display:inline-block;padding:10px 16px;border-radius:10px;border:1px solid #ddd;">زر تجريبي</a>
         </p>
