--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
     <main>
       <section class="card">
         <h1>edX</h1>
-         <img src="malariaX.JPG" alt="Student Certificate" 
-           style="width:100%; max-width:1000px; border:1px solid #ccc; border-radius:8px;">
-          <br/>
-          <a href="#" style="display:inline-block;padding:10px 16px;border-radius:10px;border:1px solid #ddd;">زر تجريبي</a>
+        <figure style="text-align:center; margin:20px 0;">
+          <img src="malariaX.JPG" 
+            alt="Student Certificate" 
+             style="width:100%; max-width:1200px; border:1px solid #ccc; border-radius:8px;">
+          <figcaption style="font-size:16px; color:#444; margin-top:10px;">
+            هذه شهادة إتمام الدورة الخاصة بـ <strong>Zerhouni Mohamed</strong>
+  </figcaption>
+</figure>
+
         </p>
       </section>
     </main>
