--- a/index.html
+++ b/index.html
@@ -1,32 +1,76 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Certificate verification </title>
-    <style>
-      body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 0; }
-      main { min-height: 100vh; display: grid; place-items: center; padding: 24px; }
-      .card { max-width: 680px; padding: 24px; border-radius: 16px; box-shadow: 0 10px 20px rgba(0,0,0,0.07); border: 1px solid #eee; }
-      h1 { margin-top: 0; }
-      p { line-height: 1.8; }
-      a { text-decoration: none; }
-    </style>
-  </head>
-  <body>
-    <main>
-      <section class="card">
-        <h1>edX</h1>
-        <figure style="text-align:center; margin:20px 0;">
-          <img src="malariaX.JPG" 
-            alt="Student Certificate" 
-             style="width:100%; max-width:1200px; border:1px solid #ccc; border-radius:8px;">
-          <figcaption style="font-size:16px; color:#444; margin-top:10px;">
-            هذه شهادة إتمام الدورة الخاصة بـ <strong>Zerhouni Mohamed</strong>
-  </figcaption>
-</figure>
-        </p>
-      </section>
-    </main>
-  </body>
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>edZ - Certificat</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f7f7fb;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: #f0f0f0;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    main {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    figure {
+      text-align: center;
+      margin: 0;
+    }
+    figure img {
+      width: 100%;
+      max-width: 1200px;
+      height: auto;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+    }
+    figcaption {
+      margin-top: 15px;
+      font-size: 18px;
+      color: #444;
+    }
+    .description {
+      margin-top: 30px;
+      font-size: 17px;
+      text-align: center;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <!-- رأس الصفحة -->
+  <header>
+    edZ
+  </header>
+
+  <main>
+    <!-- صورة الشهادة -->
+    <figure>
+      <img src="./malariaX.JPG" alt="Certificat de Zerhouni Mohamed">
+      <figcaption>
+        Verified certificate by <strong>Zerhouni Mohamed</strong>
+      </figcaption>
+    </figure>
+
+    <!-- نص أسفل الصورة -->
+    <div class="description">
+      Terms of Service & Honor Code Privacy Policy Cookie Policy Your Privacy Choices
+        © edX LLC.
+        All rights reserved except where noted. edX, Open edX and the edX and Open edX logos are registered trademarks of edX Inc.
+    </div>
+  </main>
+</body>
 </html>
