--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>edZ - Certificat</title>
+  <title>edX - Certificat</title>
   <style>
     body {
       margin: 0;
@@ -14,7 +14,7 @@
     }
     header {
       background: #f0f0f0;
-      color: #fff;
+      color: #222;
       padding: 20px;
       text-align: center;
       font-size: 28px;
@@ -53,7 +53,7 @@
 <body>
   <!-- رأس الصفحة -->
   <header>
-    edZ
+    edX
   </header>
 
   <main>
