--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <main>
     <!-- صورة الشهادة -->
     <figure>
-      <img src="./malariaX.JPG" alt="Certificat de Zerhouni Mohamed">
+      <img src="./valid.JPG" alt="Certificat de Zerhouni Mohamed">
       <figcaption>
         Verified certificate by <strong>Zerhouni Mohamed</strong>
       </figcaption>
